setup locales, document definitions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                   aria-haspopup="true" aria-expanded="false">Картотеки <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Определения первичных документов</a></li>
+                <li><%= link_to "Определения первичных документов", dmsf_document_definitions_path %></li>
                 <li><a href="#">Типовые хозяйственные операции</a></li>
                 <li><a href="#">План счетов</a></li>
                 <li><a href="#">Виды аналитики</a></li>
