--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
                 <li><%= link_to "Определения первичных документов", dmsf_document_definitions_path %></li>
                 <li><a href="#">Типовые хозяйственные операции</a></li>
                 <li><a href="#">План счетов</a></li>
-                <li><a href="#">Виды аналитики</a></li>
+                <li><%= link_to "Виды аналитики", dmsf_analytic_types_path %></li>
                 <li><a href="#">Коды аналитического учета</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Настройка АРМ</a></li>
