--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
                 <li><a href="#">Типовые хозяйственные операции</a></li>
                 <li><a href="#">План счетов</a></li>
                 <li><%= link_to "Виды аналитики", dmsf_analytic_types_path %></li>
-                <li><a href="#">Коды аналитического учета</a></li>
+                <li><%= link_to "Коды аналитического учета", dmsf_analytics_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Настройка АРМ</a></li>
               </ul>
