--- a/app/views/dmsf/analytic_types/index.html.erb
+++ b/app/views/dmsf/analytic_types/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th><%= Dmsf::DocumentDefinition.human_attribute_name :name %></th>
+      <th><%= Dmsf::AnalyticType.human_attribute_name :name %></th>
       <th></th>
     </tr>
   </thead>
