--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Определения первичных документов", dmsf_document_definitions_path %></li>
                 <li><a href="#">Типовые хозяйственные операции</a></li>
-                <li><a href="#">План счетов</a></li>
+                <li><%= link_to "План счетов", dmsf_accounts_path %></li>
                 <li><%= link_to "Виды аналитики", dmsf_analytic_types_path %></li>
                 <li><%= link_to "Коды аналитического учета", dmsf_analytics_path %></li>
                 <li role="separator" class="divider"></li>
