--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
                   aria-haspopup="true" aria-expanded="false">Картотеки <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Определения первичных документов", dmsf_document_definitions_path %></li>
-                <li><a href="#">Типовые хозяйственные операции</a></li>
+                <li><%= link_to "Типовые хозяйственные операции", dmsf_standard_operations_path %></li>
                 <li><%= link_to "План счетов", dmsf_accounts_path %></li>
                 <li><%= link_to "Виды аналитики", dmsf_analytic_types_path %></li>
                 <li><%= link_to "Коды аналитического учета", dmsf_analytics_path %></li>
