--- a/app/views/dmsf/documents/index.html.erb
+++ b/app/views/dmsf/documents/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= dmsf_document.name %></td>
         <td><%= dmsf_document.number %></td>
         <td><%= dmsf_document.date %></td>
-        <td><%= dmsf_document.entry.description %></td>
+        <td><%= dmsf_document.entry.full_name %></td>
         <td>
           <%= link_to t('shared.edit'), edit_dmsf_document_path(dmsf_document),
               class: 'btn btn-primary' %>
