seeds for settings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">DMS</a>
+          <a class="navbar-brand" href="/"><%= settings.organization_name %></a>
         </div>
 
         <div class="collapse navbar-collapse">
