--- a/app/views/dmsf/reports/card.html.erb
+++ b/app/views/dmsf/reports/card.html.erb
@@ -1,1 +1,2 @@
 <h1><%=t '.title', account: account.code %> <br><small><%= account.name %></small></h1>
+<h4>За период <%= settings.start_date %> - <%= settings.end_date %></h4>
