--- a/app/views/dmsf/reports/balance.html.erb
+++ b/app/views/dmsf/reports/balance.html.erb
@@ -1,2 +1,2 @@
 <h1><%=t '.title' %></h1>
-<h4>За период <%= settings.start_date %> - <%= settings.end_date %></h4>
+<h4>За период <%= settings.start_date %> — <%= settings.end_date %></h4>
