--- a/app/views/dmsf/reports/turnover.html.erb
+++ b/app/views/dmsf/reports/turnover.html.erb
@@ -1,5 +1,5 @@
 <h1><%=t '.title', account: account.code %> <br><small><%= account.name %></small></h1>
-<h4>За период <%= settings.start_date %> - <%= settings.end_date %></h4>
+<h4>За период <%= settings.start_date %> — <%= settings.end_date %></h4>
 
 <table class="table">
   <tr>
