--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-  <h1>АРМ <small>Автоматизация бухгалтерского учета<small></h1>
+  <h1>АРМ <br><small>Автоматизация бухгалтерского учета<small></h1>
   <p>Курсовой проект "Базы и банки данных"</p>
 </div>
